Prevent content images from growing too large

--- a/source/stylesheets/_screen.css.scss
+++ b/source/stylesheets/_screen.css.scss
@@ -533,7 +533,8 @@ html, body {
   }
 
   img {
-    max-width: 100%;
+    width: 100%;
+    max-width: 800px
   }
 
   code {
